# maybethistime

fingerprint-processor/: CMakeLists.txt  README.md
fingerprint-processor/.deccontainer/: devcontainer.json
fingerprint-processor/docs/: BUILDING.md  TESTING.md
fingerprint-processor/scripts/: build.sh  setup_codespaces.sh  test.sh
fingerprint-processor/src/: main.cpp
fingerprint-processor/src/core/: AddressGenerator.cpp  AddressGenerator.h  CorePointDetector.cpp  CorePointDetector.h  FeatureExtractor.cpp  FeatureExtractor.h  FileManager.cpp  FileManager.h
fingerprint-processor/src/database/: DatabaseWriter.cpp  DatabaseWriter.h  SQLiteAdapter.cpp
fingerprint-processor/src/utils/: Logger.h  MemoryPool.h  ThreadSafeQueue.h  Timer.cpp  Timer.h
fingerprint-processor/test_data/: README.md
fingerprint-processor/test_data/batch_test/: README.md
